--- a/Weather.html
+++ b/Weather.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <link href="Weather.css" />
+    <link rel="stylesheet" href="Weather.css" />
   </head>
   <body>
     <div class="container">
