--- a/Weather.html
+++ b/Weather.html
@@ -74,6 +74,6 @@
         </div>
       </div>
     </div>
-    <script href="Weather.js"></script>
+    <script src="Weather.js"></script>
   </body>
 </html>
